--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "immer": "^6.0.9",
     "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
+    "react-crossfade-image": "^1.2.0",
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
     "react-router-dom": "^5.2.0",
