--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-router-dom": "^5.2.0",
     "react-tooltip": "^4.2.8",
     "react-transition-group": "^4.3.0",
+    "renderjson": "^1.4.0",
     "socket.io-client": "^2.3.0",
     "three": "^0.120.1",
     "use-immer": "^0.4.1",
