--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
+    "@popperjs/core": "^2.6.0",
     "@types/node": "^14.6.0",
     "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
@@ -29,6 +30,7 @@
     "immer": "^6.0.9",
     "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.4.0",
     "react-crossfade-image": "^1.2.0",
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
