--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "@babel/preset-react": "^7.9.4",
     "@popperjs/core": "^2.6.0",
     "@types/node": "^14.6.0",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "d3": "^6.3.1",
     "dotenv-webpack": "^1.7.0",
     "express": "^4.17.1",
     "file-loader": "^6.1.0",
@@ -37,6 +38,7 @@
     "react-router-dom": "^5.2.0",
     "react-tooltip": "^4.2.8",
     "react-transition-group": "^4.3.0",
+    "react-vega": "^7.4.2",
     "renderjson": "^1.4.0",
     "socket.io-client": "^2.3.0",
     "three": "^0.120.1",
