--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "html-webpack-plugin": "^4.2.0",
     "immer": "^6.0.9",
     "npm-run-all": "^4.1.5",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
     "react-crossfade-image": "^1.2.0",
     "react-dom": "^16.13.1",
@@ -43,6 +43,8 @@
     "socket.io-client": "^2.3.0",
     "three": "^0.120.1",
     "use-immer": "^0.4.1",
+    "vega": "^5.18.0",
+    "vega-lite": "^4.17.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
