--- a/package.json
+++ b/package.json
@@ -1,55 +1,60 @@
 {
-  "name": "complex-react-app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "test.js",
-  "scripts": {
-    "dev": "webpack-dev-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/node": "^7.8.7",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-react": "^7.9.4",
-    "@popperjs/core": "^2.6.0",
-    "@types/node": "^14.6.0",
-    "axios": "^0.21.1",
-    "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "d3": "^6.3.1",
-    "dotenv-webpack": "^1.7.0",
-    "express": "^4.17.1",
-    "file-loader": "^6.1.0",
-    "file-system": "^2.2.2",
-    "fs-extra": "^9.0.1",
-    "html-webpack-harddisk-plugin": "^1.0.1",
-    "html-webpack-plugin": "^4.2.0",
-    "immer": "^6.0.9",
-    "npm-run-all": "^4.1.5",
-    "react": "^16.14.0",
-    "react-bootstrap": "^1.4.0",
-    "react-crossfade-image": "^1.2.0",
-    "react-dom": "^16.13.1",
-    "react-markdown": "^4.3.1",
-    "react-router-dom": "^5.2.0",
-    "react-tooltip": "^4.2.8",
-    "react-transition-group": "^4.3.0",
-    "react-vega": "^7.4.2",
-    "renderjson": "^1.4.0",
-    "socket.io-client": "^2.3.0",
-    "three": "^0.120.1",
-    "use-immer": "^0.4.1",
-    "vega": "^5.18.0",
-    "vega-lite": "^4.17.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.10.4"
-  }
+	"name": "complex-react-app",
+	"version": "1.0.0",
+	"description": "",
+	"main": "test.js",
+	"scripts": {
+		"dev": "npm-run-all -s generate webpackDev",
+		"webpackDev": "webpack-dev-server",
+		"build": "npm-run-all -s generate webpackBuild",
+		"webpackBuild": "webpack",
+		"generate": "babel-node --presets=@babel/preset-react,@babel/preset-env generateHtml.js",
+		"previewDist": "node previewDist",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@babel/core": "^7.9.0",
+		"@babel/node": "^7.12.10",
+		"@babel/preset-env": "^7.9.5",
+		"@babel/preset-react": "^7.9.4",
+		"@popperjs/core": "^2.6.0",
+		"@types/node": "^14.6.0",
+		"axios": "^0.21.1",
+		"babel-loader": "^8.1.0",
+		"clean-webpack-plugin": "^3.0.0",
+		"d3": "^6.3.1",
+		"dotenv-webpack": "^1.8.0",
+		"express": "^4.17.1",
+		"file-loader": "^6.1.0",
+		"file-system": "^2.2.2",
+		"fs-extra": "^9.0.1",
+		"html-webpack-harddisk-plugin": "^1.0.2",
+		"html-webpack-plugin": "^4.5.1",
+		"immer": "^6.0.9",
+		"npm-run-all": "^4.1.5",
+		"react": "^16.14.0",
+		"react-bootstrap": "^1.4.0",
+		"react-crossfade-image": "^1.2.0",
+		"react-dom": "^16.13.1",
+		"react-markdown": "^4.3.1",
+		"react-router-dom": "^5.2.0",
+		"react-tooltip": "^4.2.8",
+		"react-transition-group": "^4.3.0",
+		"react-vega": "^7.4.2",
+		"renderjson": "^1.4.0",
+		"socket.io-client": "^2.3.0",
+		"three": "^0.120.1",
+		"use-immer": "^0.4.1",
+		"vega": "^5.18.0",
+		"vega-lite": "^4.17.0",
+		"webpack": "^4.43.0",
+		"webpack-cli": "^3.3.11",
+		"webpack-dev-server": "^3.11.0"
+	},
+	"devDependencies": {
+		"@babel/plugin-proposal-class-properties": "^7.10.4"
+	}
 }
