--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@types/node": "^14.6.0",
 		"axios": "^0.21.1",
 		"babel-loader": "^8.1.0",
+		"chart.js": "^2.9.4",
 		"clean-webpack-plugin": "^3.0.0",
 		"d3": "^6.3.1",
 		"dotenv-webpack": "^1.8.0",
@@ -37,6 +38,7 @@
 		"npm-run-all": "^4.1.5",
 		"react": "^16.14.0",
 		"react-bootstrap": "^1.4.0",
+		"react-chartjs-2": "^2.11.1",
 		"react-crossfade-image": "^1.2.0",
 		"react-dom": "^16.13.1",
 		"react-markdown": "^4.3.1",
