--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@types/node": "^14.6.0",
 		"axios": "^0.21.1",
 		"babel-loader": "^8.1.0",
+		"bootstrap": "^4.6.0",
 		"chart.js": "^2.9.4",
 		"clean-webpack-plugin": "^3.0.0",
 		"d3": "^6.3.1",
