--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"react-bootstrap": "^1.4.0",
 		"react-chartjs-2": "^2.11.1",
 		"react-crossfade-image": "^1.2.0",
+		"react-dat-gui": "^4.0.3",
 		"react-dom": "^16.13.1",
 		"react-markdown": "^4.3.1",
 		"react-router-dom": "^5.2.0",
