--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"react-markdown": "^4.3.1",
 		"react-popper": "^2.2.4",
 		"react-router-dom": "^5.2.0",
+		"react-scroll": "^1.8.1",
 		"react-tooltip": "^4.2.8",
 		"react-transition-group": "^4.3.0",
 		"react-vega": "^7.4.2",
