--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@babel/preset-react": "^7.9.4",
 		"@popperjs/core": "^2.6.0",
 		"@types/node": "^14.6.0",
+		"@widgetjs/tree": "^1.8.3",
 		"axios": "^0.21.1",
 		"babel-loader": "^8.1.0",
 		"bootstrap": "^4.6.0",
@@ -33,6 +34,7 @@
 		"file-loader": "^6.1.0",
 		"file-system": "^2.2.2",
 		"fs-extra": "^9.0.1",
+		"gltf-webpack-loader": "^1.0.6",
 		"html-webpack-harddisk-plugin": "^1.0.2",
 		"html-webpack-plugin": "^4.5.1",
 		"immer": "^6.0.9",
@@ -42,6 +44,7 @@
 		"react-chartjs-2": "^2.11.1",
 		"react-crossfade-image": "^1.2.0",
 		"react-dom": "^16.13.1",
+		"react-jss": "^10.5.1",
 		"react-markdown": "^4.3.1",
 		"react-popper": "^2.2.4",
 		"react-router-dom": "^5.2.0",
