--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
 		"gltf-webpack-loader": "^1.0.6",
 		"html-webpack-harddisk-plugin": "^1.0.2",
 		"html-webpack-plugin": "^4.5.1",
-		"immer": "^6.0.9",
+		"immer": "^9.0.1",
 		"npm-run-all": "^4.1.5",
 		"react": "^16.14.0",
 		"react-bootstrap": "^1.4.0",
@@ -54,6 +54,7 @@
 		"react-vega": "^7.4.2",
 		"renderjson": "^1.4.0",
 		"socket.io-client": "^2.3.0",
+		"ssri": "^8.0.1",
 		"three": "^0.120.1",
 		"use-immer": "^0.4.1",
 		"vega": "^5.18.0",
