--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"html-webpack-plugin": "^4.5.1",
 		"immer": "^9.0.1",
 		"npm-run-all": "^4.1.5",
+		"numeric": "^1.2.6",
 		"react": "^16.14.0",
 		"react-bootstrap": "^1.4.0",
 		"react-chartjs-2": "^2.11.1",
