--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
 		"file-system": "^2.2.2",
 		"fs-extra": "^9.0.1",
 		"gltf-webpack-loader": "^1.0.6",
+		"hosted-git-info": "^4.0.2",
 		"html-webpack-harddisk-plugin": "^1.0.2",
 		"html-webpack-plugin": "^4.5.1",
 		"immer": "^9.0.1",
+		"lodash": "^4.17.21",
 		"npm-run-all": "^4.1.5",
 		"numeric": "^1.2.6",
 		"react": "^16.14.0",
@@ -58,6 +60,8 @@
 		"ssri": "^8.0.1",
 		"styled-components": "^5.2.3",
 		"three": "^0.118.1",
+		"trim": "^1.0.1",
+		"url-parse": "^1.5.1",
 		"use-immer": "^0.4.1",
 		"vega": "^5.18.0",
 		"vega-lite": "^4.17.0",
