--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
 		"axios": "^0.21.1",
 		"babel-loader": "^8.1.0",
 		"bootstrap": "^4.6.0",
+		"browserslist": "^4.16.6",
 		"chart.js": "^2.9.4",
 		"clean-webpack-plugin": "^3.0.0",
 		"d3": "^6.3.1",
+		"dns-packet": "^5.2.4",
 		"dotenv-webpack": "^1.8.0",
 		"express": "^4.17.1",
 		"file-loader": "^6.1.0",
